tests/requests/invalid/003.py
from restkit.http.errors import InvalidRequestMethod
request = InvalidRequestMethod